log
sá., 23 de abr. de 2022 19:24:48: 
 tests:  1|8
total_score: 0/70
4eb158a
sá., 23 de abr. de 2022 19:55:17: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
8093b18
sá., 23 de abr. de 2022 21:33:32: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:85:14: error: comparison of distinct pointer types lacks a cast [-Werror]
        if(key> aux)
              ^
cc1.exe: all warnings being treated as errors
Compilation failed
307742d
sá., 23 de abr. de 2022 21:45:26: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
0994719
sá., 23 de abr. de 2022 21:46:55: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
907c92e
sá., 23 de abr. de 2022 22:00:25: 
 treemap.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
 tests:  11|6
total_score: 15/70
87cabff
sá., 23 de abr. de 2022 22:47:34: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:52:5: error: implicit declaration of function 'whille' [-Werror=implicit-function-declaration]
     whille(aux != NULL){
     ^~~~~~
treemap.c:52:24: error: expected ';' before '{' token
     whille(aux != NULL){
                        ^
cc1.exe: all warnings being treated as errors
Compilation failed
9845303
sá., 23 de abr. de 2022 22:48:09: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:63:16: error: 'return' with a value, in function returning void [-Werror]
         return NULL;
                ^~~~
treemap.c:49:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
11dedee
sá., 23 de abr. de 2022 22:49:38: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
69bf9be
sá., 23 de abr. de 2022 22:51:03: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
88f70e0
sá., 23 de abr. de 2022 23:18:47: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
6ff7c85
sá., 23 de abr. de 2022 23:19:20: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b8e7203
sá., 23 de abr. de 2022 23:21:05: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
ec4f28d
sá., 23 de abr. de 2022 23:36:53: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  11|6
total_score: 15/70
a686dbd
sá., 23 de abr. de 2022 23:47:56: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:51:15: error: unused variable 'aux2' [-Werror=unused-variable]
     TreeNode *aux2 = NULL;
               ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c2930a4
sá., 23 de abr. de 2022 23:48:26: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
8c604fa
do., 24 de abr. de 2022  0:04:33: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
4edbff7
do., 24 de abr. de 2022  1:06:36: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
c359e51
do., 24 de abr. de 2022  1:08:47: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  11|6
total_score: 15/70
f4b45fb
do., 24 de abr. de 2022  1:10:48: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
d5060fb
do., 24 de abr. de 2022  1:17:23: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
09df41e
do., 24 de abr. de 2022  1:21:08: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f5abd8f
do., 24 de abr. de 2022  1:22:36: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:74:5: error: expected ';' before '}' token
     }
     ^
Compilation failed
cca4dc9
do., 24 de abr. de 2022  1:22:44: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
40fed4f
do., 24 de abr. de 2022  1:23:30: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8026749
do., 24 de abr. de 2022  1:32:10: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
caf3f8f
do., 24 de abr. de 2022  1:42:32: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bdc996e
do., 24 de abr. de 2022  1:50:29: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:84:13: error: expected ';' before '}' token
             }
             ^
Compilation failed
07a3b8a
do., 24 de abr. de 2022  1:50:41: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5b1ee08
do., 24 de abr. de 2022  2:24:29: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ba5323c
do., 24 de abr. de 2022  2:42:26: 
 treemap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|0
fc6ebad
do., 24 de abr. de 2022  2:51:19: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
908b4ee
do., 24 de abr. de 2022  2:55:55: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
3ac3d35
do., 24 de abr. de 2022  3:58:40: 
 treemap.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  10|6
total_score: 15/70
3b413ef
do., 24 de abr. de 2022  3:59:35: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|6
total_score: 15/70
69eb9e8
do., 24 de abr. de 2022  4:00:46: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
61282dc
do., 24 de abr. de 2022  4:07:26: 
 treemap.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  13|5
total_score: 25/70
9b5bea0
